--- a/article/sigproc.bib
+++ b/article/sigproc.bib
@@ -3,6 +3,21 @@
 	HOWPUBLISHED = {\url{https://en.wikipedia.org/wiki/Wikipedia}},
 	YEAR = {2013}	}
 
+@INPROCEEDINGS{Kirsch06distance-sensitivebloom,
+    author = {Adam Kirsch and Michael Mitzenmacher},
+    title = {Distance-Sensitive Bloom Filters},
+    booktitle = {In Proceedings of the Eighth Workshop on Algorithm Engineering and Experiments (ALENEX},
+    year = {2006}
+}
+
+@INPROCEEDINGS{Broder97onthe,
+    author = {Andrei Z. Broder},
+    title = {On the Resemblance and Containment of Documents},
+    booktitle = {In Compression and Complexity of Sequences (SEQUENCES’97},
+    year = {1997},
+    pages = {21--29},
+    publisher = {IEEE Computer Society}
+}
 @ARTICLE{wilkinson:wiki,
 	AUTHOR = "Dennis M. Wilkinson and Bernardo A. Huberman",
 	TITLE = "Assessing the Value of Cooperation in Wikipedia",
