Added unique title count back in to histogram code

--- a/article/article-draft.tex
+++ b/article/article-draft.tex
@@ -223,9 +223,9 @@ As we might expect, as shingle length increases, the false positive rate decreas
 
 %We performed several analyses to provide more insight into the occurence of duplicate sentences. In particular, we were interested in detecting similar sentences that arose from copying text from one article to another since such instances would represent content that is either redundant, or content that has diverged in the sense that either the original or the copy was edited for clarification of factual correctness and the other was not. Such instances give insight into the Wikipedia editing process, and also represent an opportunity to improve article quality on Wikipedia by identifying places where further editing or article merging may be needed.
 
-All of our experiments were run against an XML dump of current English-language Wikipedia (enwiki) articles (as of 4/2013) obtained from dumps.wikimedia.org. The enwiki dump is approximately 40G in size and contains 4,113,785 articles (after excluding certain non-article page types). Running the first four steps of our application (up to but not including the final edit distance filtering pass) against the enwiki dump on a shared cluster of 16 nodes with (15 GB RAM and 4 cores each) took $\approx 2$ hours.
+All of our experiments were run against an XML dump of current English-language Wikipedia (enwiki) articles (as of 7/2013) obtained from dumps.wikimedia.org. The enwiki dump is approximately 42G in size and contains 10,218,778 articles (after excluding certain non-article page types). Running our application on the enwiki dump on a shared cluster of 16 nodes (20 GB RAM and 4? cores each) took $\approx$ 25 minutes.
 
-After minhashing and deduplification, we found a total of 9,465,881 similar article/sentence pairs. After clustering these pairs, the total number of similar sentence clusters was 415,936, including 1,792,748 unique article/sentence pairs over 759,297 article titles. The total number of unique sentences over all cluster was 1,305,359.
+The total number of similar sentence clusters was 1,151,640, including 3,496,074 article/sentence pairs over  article titles. The total number of unique sentences over all cluster was 1,305,359.
 
 Cluster sizes ranged from 2 to 28,008. (See Figure \ref{clust} for a breakdown of counts by cluster size.) Most sentence clusters are small, but the distribution of cluster sizes exhibits a long tail. As a result, while 99\% of our clusters have size below or equal to 30, about 1/3 of the output sentence/article pairs fall into clusters with size greater than 30. One explanation for this distribution of sentences is the phenomenon we call ''templatification,'' which we describe in more detail below.
 
