Added back in code to filter identical clusters

--- a/article/article-draft.tex
+++ b/article/article-draft.tex
@@ -334,22 +334,84 @@ Looking at the distribution of cluster sizes in Figure \ref{clust}, we can see t
 \begin{tabular}{| l | c |}
     \hline
     \textbf{Article ID} & \textbf{Title} \\ \hline
-    21986867 & 2000 New Year Honours \\ \hline
-    21986897 & 1999 New Year Honours \\ \hline
-    3951586 & Instruments of the United Kingdom, 1994 \\ \hline
-    3951664 & Instruments of the United Kingdom, 1995 \\ \hline
-    1903966 & Management of baldness \\ \hline
-    38088660 & Management of androgenic alopecia \\ \hline
-    1503105 & Jayne Torvill \\ \hline
-    1503115 & Christopher Dean \\ \hline
-    184843 & Henry VI, Part 1 \\ \hline
-    184846 & Henry VI, Part 2 \\ \hline
-    184847 & Henry VI, Part 3 \\ \hline
-    10701462 & List of birds of Zambia \\ \hline
-    10930255 & List of birds of Zimbabwe \\ \hline
-    10930111 & List of birds of Mozambique \\ \hline
-    48711 & Oregon Trail \\ \hline
-    31518964 & History of the Oregon Trail \\
+[Early life and career of Marcus Aurelius, Marcus Aurelius]
+[Private equity in the 2000s, History of private equity and venture capital]
+[List of ethnic cleansings, Ethnic cleansing]
+[Route of the Oregon Trail, Oregon Trail]
+[English literature, British literature]
+[Culture of the United States, Society of the United States]
+[18th-century history of Germany, History of Germany]
+[Insect morphology, Insect wing]
+[Nutritional neuroscience, Nutrition and cognition]
+[Philippine general election, 2004, Philippine presidential election, 2004]
+[History of the Dallas Mavericks, Dallas Mavericks]
+[May Bukas Pa, List of May Bukas Pa episodes]
+[Individualist anarchism in the United States, Anarchism in the United States]
+[Native Americans in the United States, Native American cultures in the United States]
+[Hockey stick controversy, Hockey stick graph]
+[Filioque, History of the Filioque controversy]
+[Vancouver Canucks, History of the Vancouver Canucks]
+[Silvio Berlusconi, Controversies surrounding Silvio Berlusconi]
+[2007 suicide bombings in Iraq, List of terrorist incidents in Iraq in 2007]
+[List of Canadian tornadoes and tornado outbreaks, List of 21st-century Canadian tornadoes and tornado outbreaks]
+[Scotland in the modern era, History of Scotland]
+[Reliability of Wikipedia, Criticism of Wikipedia]
+[Imperial Roman army, Auxiliaries (Roman military)]
+[Libertarian socialism, Libertarian Marxism]
+[Arts in Australia, Culture of Australia]
+[Canti (Leopardi), Giacomo Leopardi]
+[Culture of England, Religion in England]
+[Government of Mahmoud Ahmadinejad (2005–present), Foreign policy of Mahmoud Ahmadinejad]
+[Economy of England in the Middle Ages, Economics of English towns and trade in the Middle Ages]
+[Go Nagai bibliography, Go Nagai]
+[Galvatron, Megatron]
+[Wakfu (TV series), Wakfu]
+[Isabela, Basilan, History of Basilan]
+[List of Prison Break recurring characters, List of Prison Break minor characters]
+[Interracial marriage, Miscegenation]
+[List of Shakespearean characters (L–Z), List of Shakespearean characters (A–K)]
+[Fascism and ideology, Fascism]
+[Anarchism, History of anarchism]
+[Ethnic groups in Ecuador, Ecuadorian people]
+[History of painting, Western painting, 20th-century Western painting]
+[Precipitation, Rain]
+[Megaupload legal case, Megaupload]
+[Anti-spam techniques, Anti-spam techniques (users)]
+[History of the Detroit Tigers, Detroit Tigers]
+[Yuko Kavaguti, Alexander Smirnov (figure skater)]
+[San Francisco Giants, History of the San Francisco Giants]
+[List of Deadliest Warrior episodes, Deadliest Warrior (season 1), Deadliest Warrior (season 3), Deadliest Warrior (season 2)]
+[List of Reaper characters, Reaper (TV series)]
+[Port of Tianjin operations and logistics, Port of Tianjin]
+[Management of androgenic alopecia, Management of baldness]
+[Legion of Super-Heroes, Legion of Super-Heroes (1958 team)]
+[American rock, Rock music]
+[One-Day Internationals in England in 2005, Test matches in England in 2005, Australian cricket team in England in 2005]
+[Swedes, Sweden]
+[Controversies surrounding the European sovereign-debt crisis, Policy reactions to the European sovereign-debt crisis, European sovereign-debt crisis, Economic reforms and recovery proposals regarding the European sovereign-debt crisis]
+[List of Irish Americans, List of Americans of Irish descent]
+[CIA leak scandal criminal investigation, Plame affair grand jury investigation]
+[Medway watermills (lower tributaries), River Len]
+[2000 New Year Honours, 1999 New Year Honours]
+[Kingdom of Greece, History of modern Greece]
+[List of Russian people, List of Russian scientists]
+
+    %% 21986867 & 2000 New Year Honours \\ \hline
+    %% 21986897 & 1999 New Year Honours \\ \hline
+    %% 3951586 & Instruments of the United Kingdom, 1994 \\ \hline
+    %% 3951664 & Instruments of the United Kingdom, 1995 \\ \hline
+    %% 1903966 & Management of baldness \\ \hline
+    %% 38088660 & Management of androgenic alopecia \\ \hline
+    %% 1503105 & Jayne Torvill \\ \hline
+    %% 1503115 & Christopher Dean \\ \hline
+    %% 184843 & Henry VI, Part 1 \\ \hline
+    %% 184846 & Henry VI, Part 2 \\ \hline
+    %% 184847 & Henry VI, Part 3 \\ \hline
+    %% 10701462 & List of birds of Zambia \\ \hline
+    %% 10930255 & List of birds of Zimbabwe \\ \hline
+    %% 10930111 & List of birds of Mozambique \\ \hline
+    %% 48711 & Oregon Trail \\ \hline
+    %% 31518964 & History of the Oregon Trail \\
     \hline
 \end{tabular}
 \end{table}
